--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: required
 
 # This moves Kubernetes specific config files.
-env:
-- CHANGE_MINIKUBE_NONE_USER=true
 
 before_script:
 # Download kubectl, which is a requirement for using minikube.
+- export CHANGE_MINIKUBE_NONE_USER=true
 - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.8.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
 # Download minikube.
 - curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
