--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ script:
 - echo TRAVIS_BUILD_NUMBER is $TRAVIS_BUILD_NUMBER
 - echo TRAVIS_JOB_NUMBER is $TRAVIS_JOB_NUMBER
 - echo TRAVIS_JOB_ID is $TRAVIS_JOB_ID
+# try some docker commands
+- docker -version
+- docker images
+- docker ps -a
 # Create example Redis deployment on Kubernetes.
 - kubectl cluster-info 
 - kubectl run travis-example --image=redis
