--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,13 @@ before_script:
 - minikube update-context
 # Wait for Kubernetes to be up and ready.
 - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
+- eval $(minikube docker-env)
 
 script:
 - echo TRAVIS_BUILD_NUMBER is $TRAVIS_BUILD_NUMBER
 - echo TRAVIS_JOB_NUMBER is $TRAVIS_JOB_NUMBER
 - echo TRAVIS_JOB_ID is $TRAVIS_JOB_ID
 # try some docker commands
-# Create example Redis deployment on Kubernetes.
-- kubectl cluster-info 
-- kubectl run travis-example --image=redis
 - docker version
 - docker images
 - docker ps -a
