--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ before_script:
 # Download minikube.
 - curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 && chmod +x minikube && sudo mv minikube /usr/local/bin/
 - sudo minikube start --vm-driver=none --kubernetes-version=v1.9.0
+- eval $(minikube docker-env)
 # Fix the kubectl context, as it's often stale.
 - minikube update-context
 # Wait for Kubernetes to be up and ready.
 - JSONPATH='{range .items[*]}{@.metadata.name}:{range @.status.conditions[*]}{@.type}={@.status};{end}{end}'; until kubectl get nodes -o jsonpath="$JSONPATH" 2>&1 | grep -q "Ready=True"; do sleep 1; done
-- sudo eval $(minikube docker-env)
 
 script:
 - echo TRAVIS_JOB_NUMBER is $TRAVIS_JOB_NUMBER
