--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ before_script:
 
 script:
 - echo TRAVIS_JOB_NUMBER is $TRAVIS_JOB_NUMBER
-- eval $(sudo minikube docker-env)
-- docker build -t somename .
+- docker build -t somename:1.0 .
 - docker images
 - kubectl create -f k.yml
 - sleep 15
